--- a/gerant/station.css
+++ b/gerant/station.css
@@ -3,60 +3,32 @@
     color: #DF0C36;
 }
 
-.sd-gerant-name {
-    padding-left: 40px;
-    padding-bottom: 40px;
+.objectifs-station h3 {
+    font-size: 12px;
+    font-weight: normal;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
-.sdom-objectifs {
+.top-service {
     display: grid;
-    grid-template-columns: 30% 30% 30%;
-    column-gap: 1%;
-    row-gap: 20px;
-    justify-content: center;
-    padding-top: 20px;
-}
-
-.sdo {
-    color: white;
-}
-
-.sdo-name {
-    font-size: 14px;
-    font-weight: 100;
-    padding: 10px;
-    letter-spacing: 1px;
-}
-
-.sdo-value {
-    font-size: 24px;
-    text-align: center;
-    font-weight: 100;
-    padding: 20px;
-}
-
-.sdor-value {
-    font-size: 11px;
-}
-
-.sdo-result {
-    background-color: rgba(255, 255, 255, 0.411);
-    color: black;
+    grid-template-columns: auto auto auto;
+    justify-content: start;
+    gap: 40px;
+    background-color: #eeeeee;
     padding: 10px;
 }
 
-.sdo.carburant {
-    background-color: #2F7BB4;
+.top-service h2 {
+    font-size: 16px;
+    color: #777777;
+    font-weight: 100;
+    display: grid;
+    align-items: center;
+    grid-template-columns: auto auto auto;
 }
 
-.sdo.lubrifiant {
-    background-color: #DB7E04;
-}
-
-.sdo.sfs {
-    background-color: #7D7064;
-}
-
-.sdo.gpl {
-    background-color: #278903;
+.top-service h2 span {
+    font-weight: bold;
+    color: #444444;
 }
