--- a/gerant/style.css
+++ b/gerant/style.css
@@ -12,7 +12,7 @@
 
 .nav-bar {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto auto auto;
     width: 50%;
     justify-content: start;
     column-gap: 40px;
@@ -45,4 +45,16 @@
 
 .file-form-group-2 label:hover {
     cursor: pointer;
+}
+
+@media screen and (max-width: 800px) {
+    .nav-bar {
+        grid-template-columns: 100%;
+    }
+    .nav-bar {
+        width: 100%;
+    }
+    .nav-bar-item {
+        background-color: #eeeeee;
+    }
 }
