--- a/root/station-management.css
+++ b/root/station-management.css
@@ -5,7 +5,6 @@
     row-gap: 20px;
     padding: 20px;
     overflow-y: scroll;
-    height: 80vh;
 }
 
 #add-station-button {
@@ -27,30 +26,34 @@
 .station {
     padding: 10px;
     background-color: #ffffff;
-    height: 200px;
     display: grid;
-    grid-template-rows: 30% 50% auto auto;
-    box-shadow: 10px 5px 20px #cccccc;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    box-shadow: -1px 2px 10px #cccccc;
 }
 
 .station button {
-    color: #777777;
+    color: #004196;
     background-color: transparent;
     font-size: 10px;
     transition: 0.4s;
+}
+
+.station button i {
+    font-size: 16px;
 }
 
 .station button:hover {
     transform: scale(1.5);
 }
 
-.station-name {
-    color: #DF0C36;
-    font-size: 18px;
+.form-group .station-name,
+.station-tmg {
     font-weight: 500;
-    text-align: center;
-    border: none;
+    border: 1px solid #cccccc;
     width: 100%;
+    border-radius: 5px;
+    padding: 4px;
 }
 
 .station .station-gerant {
