--- a/root/station-management.css
+++ b/root/station-management.css
@@ -1,27 +1,22 @@
 .station-list {
     display: grid;
     grid-template-columns: 30% 30% 30%;
-    column-gap: 20px;
-    row-gap: 20px;
+    gap: 20px;
     padding: 20px;
     overflow-y: scroll;
-    height: 85vh;
+    height: 70vh;
 }
 
-#add-station-button {
-    text-decoration: none;
-    background-color: #ffffff;
-    color: #777777;
+.button-options {
+    position: sticky;
+    top: 0px;
+    left: 0px;
+    padding: 20px;
+    border-bottom: 2px solid #cccccc;
     display: grid;
-    height: 100px;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 10px 5px 20px #cccccc;
-    transition: 0.4s;
-}
-
-#add-station-button:hover {
-    transform: scale(1.05);
+    grid-template-columns: auto auto auto;
+    justify-content: start;
+    column-gap: 20px;
 }
 
 .station {
@@ -29,8 +24,8 @@
     background-color: #ffffff;
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: auto;
     box-shadow: -1px 2px 10px #cccccc;
+    margin-bottom: 20px;
 }
 
 .station button {
@@ -48,6 +43,16 @@
     transform: scale(1.5);
 }
 
+.file-form-group input {
+    display: none;
+}
+
+.file-form-file label {
+    background-color: #004196;
+    color: white;
+    font-size: 14px;
+}
+
 .form-group .station-name,
 .station-tmg {
     font-weight: 500;
@@ -61,4 +66,11 @@
     font-size: 11px;
     color: #777777;
     border: none;
+}
+
+@media screen and (max-width: 800px) {
+    .station-list {
+        grid-template-columns: auto;
+        width: 100vw;
+    }
 }
