--- a/root/style.css
+++ b/root/style.css
@@ -71,14 +71,16 @@ body {
 
 .nav-bar {
     height: 100vh;
-    background-color: #7D7064;
+    background-color: #f3f3f3;
+    border-right: 1px solid #cccccc;
 }
 
 .nav-bar-item {
     display: block;
-    color: white;
+    color: #DF0C36;
+    font-weight: bold;
+    font-size: 16px;
     text-decoration: none;
-    font-weight: 500;
     padding: 20px;
 }
 
@@ -91,7 +93,54 @@ body {
 }
 
 a.selected-item {
-    font-weight: 500;
-    background-color: #DF0C36;
-    font-size: 20px;
+    background-color: #cccccc;
+}
+
+#menu {
+    display: none;
+}
+
+@media screen and (max-width: 800px) {
+    .nav-bar {
+        width: 50px;
+        height: 25px;
+        background-color: #DF0C36;
+        transition: 0.4s;
+        overflow: hidden;
+        border: none;
+        position: absolute;
+        left: 10px;
+        top: 30px;
+        z-index: 1000;
+    }
+    .logo-total {
+        margin-left: 45px;
+    }
+    #menu {
+        display: block;
+        background-color: white;
+        color: #DF0C36;
+        width: 50px;
+        height: 25px;
+        text-align: center;
+        border: 1px solid #DF0C36;
+    }
+    .nav-bar-item,
+    .selected-item {
+        color: white;
+        font-weight: normal;
+        width: 100%;
+    }
+    .selected-item {
+        background-color: white;
+    }
+    .nav-bar:hover {
+        height: 100vh;
+        width: 60%;
+        top: 0px;
+        left: 0px;
+    }
+    .main-container {
+        grid-template-columns: auto;
+    }
 }
