--- a/root/wiki-management.css
+++ b/root/wiki-management.css
@@ -20,3 +20,17 @@ input {
 .wm-list h1 span:hover {
     cursor: pointer;
 }
+
+@media screen and (max-width: 800px) {
+    .wm-list {
+        grid-template-columns: auto auto;
+        width: 100%;
+        height: 100vh;
+    }
+    .wiki-table {
+        padding: 10px;
+    }
+    .wiki-list * {
+        color: black;
+    }
+}
